@@ -570,7 +570,7 @@ class ServletUnitHttpResponse implements HttpServletResponse {
         StringBuffer sb = new StringBuffer();
         for (Enumeration e = _cookies.elements(); e.hasMoreElements();) {
             Cookie cookie = (Cookie) e.nextElement();
-            sb.append( cookie.getName() ).append( '=' ).append( cookie.getValue() );
+            sb.append( cookie.getName() ).append( '=' ).append( cookie.getValue() ).append( ";path=" ).append( cookie.getPath() );
             if (e.hasMoreElements()) sb.append( ',' );
         }
         setHeader( "Set-Cookie", sb.toString() );
