@@ -10,6 +10,11 @@ Limitations:
 
 
 Revision History:
+21-Oct-2002
+Problems fixed:
+    1. The cookie fixes of 17-Oct had caused ServletUnit to see multiple servlets in an application with varying paths
+       as being in separate sessions.
+
 17-Oct-2002
 Additions:
     1. Cookies are now restricted by their origin server, rather than being sent on every request.
